--- a/ATM/App.xaml
+++ b/ATM/App.xaml
@@ -5,5 +5,15 @@
              xmlns:prism="http://prismlibrary.com/" >
     <Application.Resources>
 
+        <ResourceDictionary>
+
+            <ResourceDictionary.MergedDictionaries>
+
+                <ResourceDictionary Source="/Views/Styles/BaseStyles.xaml" />
+
+            </ResourceDictionary.MergedDictionaries>
+
+        </ResourceDictionary>
+
     </Application.Resources>
 </prism:PrismApplication>
