--- a/ATM/Views/Pages/BalancePage.xaml
+++ b/ATM/Views/Pages/BalancePage.xaml
@@ -7,9 +7,19 @@
              xmlns:prism="http://prismlibrary.com/"   
              prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    
-    <Grid Background="Black" Width="200" Height="200">
+             d:DesignHeight="350" d:DesignWidth="525">
+
+    <Grid Background="White">
+        
+        <Button Style="{StaticResource NavigateBackButton}" Command="{Binding NavigateBackCommand}" />
+
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+
+            <TextBlock Text="{Binding StringFormat=Your balance is {0} рублей, Path=Balance}" FontSize="25" />
             
+        </StackPanel>
+        
+
     </Grid>
+
 </UserControl>
