--- a/ATM/Views/Pages/BalancePage.xaml
+++ b/ATM/Views/Pages/BalancePage.xaml
@@ -4,11 +4,19 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ATM.ViewModels.Pages"
-             xmlns:prism="http://prismlibrary.com/"   
+             xmlns:prism="http://prismlibrary.com/"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:coreBehaviors="clr-namespace:Core.Behaviors;assembly=Core"
              prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
              d:DesignHeight="350" d:DesignWidth="525">
 
+    <i:Interaction.Triggers>
+        <coreBehaviors:RoutedEventTrigger RoutedEvent="Loaded">
+            <prism:InvokeCommandAction Command="{Binding LoadedCommand}" />
+        </coreBehaviors:RoutedEventTrigger>
+    </i:Interaction.Triggers>
+    
     <Grid Background="White">
         
         <Button Style="{StaticResource NavigateBackButton}" Command="{Binding NavigateBackCommand}" />
