--- a/ATM/Views/Pages/TopUpBalancePage.xaml
+++ b/ATM/Views/Pages/TopUpBalancePage.xaml
@@ -6,8 +6,16 @@
       xmlns:local="clr-namespace:ATM.Views.Pages"
       mc:Ignorable="d" 
       xmlns:prism="http://prismlibrary.com/"   
+      xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+      xmlns:coreBehaviors="clr-namespace:Core.Behaviors;assembly=Core"
       prism:ViewModelLocator.AutoWireViewModel="True" 
       d:DesignHeight="350" d:DesignWidth="525">
+
+    <i:Interaction.Triggers>
+        <coreBehaviors:RoutedEventTrigger RoutedEvent="Loaded">
+            <prism:InvokeCommandAction Command="{Binding LoadedCommand}" />
+        </coreBehaviors:RoutedEventTrigger>
+    </i:Interaction.Triggers>
 
     <Grid Background="White">
 
