--- a/ATM/Views/Pages/CurrentStatePage.xaml
+++ b/ATM/Views/Pages/CurrentStatePage.xaml
@@ -4,10 +4,18 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ATM.Views.Pages"
-             xmlns:prism="http://prismlibrary.com/" xmlns:pages="clr-namespace:ATM.ViewModels.Pages" d:DataContext="{d:DesignInstance Type=pages:CurrentStatePageViewModel}"
+             xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True"
+             xmlns:coreBehaviors="clr-namespace:Core.Behaviors;assembly=Core"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+
+    <i:Interaction.Triggers>
+        <coreBehaviors:RoutedEventTrigger RoutedEvent="Loaded">
+            <prism:InvokeCommandAction Command="{Binding LoadedCommand}" />
+        </coreBehaviors:RoutedEventTrigger>
+    </i:Interaction.Triggers>
 
     <Grid Background="White">
         
