--- a/ATM/Views/MainWindow.xaml
+++ b/ATM/Views/MainWindow.xaml
@@ -4,7 +4,8 @@
         xmlns:prism="http://prismlibrary.com/"
         xmlns:core="clr-namespace:Core;assembly=Core"
         prism:ViewModelLocator.AutoWireViewModel="True"
-        Title="{Binding Title}" Height="350" Width="525">
+        Title="{Binding Title}" Height="380" Width="550"
+        MinHeight="380" MinWidth="550">
     
     <Grid>
         <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.MainPage}" />
